1998-12-15  Martin Baulig  <baulig@merkur.uni-trier.de>

	* pixmaps/Makefile.am (CLEANFILES): Add $(BUILT_SOURCES) here.

Tue Dec 15  Felix Bellaby  <felix@pooh.u-net.com>
	* gnome-client.c (gnome_dlient_set_config_prefix): new function
	for use by clients like the panel that use special config names.
	* gnome-client.h: extra docs plus new function

1998-12-15  Ettore Perazzoli  <ettore@comm2000.it>

	* gnome-app.c (gnome_app_get_dock): New function.
	(gnome_app_add_dock_item): New function.
	(gnome_app_add_docked): Rewritten by means of
 	`gnome_app_add_dock_item()'.

	* gnome-dock.c (gnome_dock_init): Initialize
	`floating_items_allowed' to TRUE.
	(gnome_dock_allow_floating_items): New function.
        (drag_motion): Do not detach if floating items are
	not allowed.

	* gnome-dock.h (struct _GnomeDock): New member
 	`floating_items_allowed'.

	* gnome-dock-band.h: Marked as immature.

	* gnome-dock.h: Marked as immature.

	* gnome-dock-item.h: Marked as immature.

	* gnome-app.c (gnome_app_get_dock_item_by_name): New function.

	* gnome-dock-item.c (gnome_dock_item_get_child): New function.

	* gnome-app.c (gnome_app_set_menus):
 	s/get_menubar_detachable/get_toolbar_detachable.

1998-12-15  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-app.c (gnome_app_set_*): removed "layout_changed" signal
	emissions after calling gnome_dock_add_item().
	* gnome-dock.c (gnome_dock_add_item, gnome_dock_add_floating_item):
	emit "layout_changed" signal.

1998-12-15  Martin Baulig  <martin@home-of-linux.org>

	* gnome-procbar.c (gnome_proc_bar_set_orient): New function.

1998-12-14  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-app-helper.c (gnome_app_install_appbar_menu_hints): Remove
	C++ comments.

1998-12-15  Jeff Garzik  <jgarzik@pobox.com>

	* gnome-spell.[ch], gtkspell.[ch]:
	Renamed gtkspell to gnome-spell, internationalized, doc'd.

1998-12-15  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-app.c (gnome_app_set_*bar): for setting things after the